--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Rare birds and animals official page</title>
 </head>
 
@@ -19,7 +19,7 @@
                 <div class="header-line-left">
                     <div class="logo">
                         <a href="/index.html">
-                            <img src="/img/logo.png" alt="logo">
+                            <img src="img/logo.png" alt="logo">
                             <p>birdim</p>
                         </a>
                     </div>
@@ -63,7 +63,7 @@
                     </div>
                 </div>
                 <div class="header-video">
-                    <img src="/img/header-video.png" alt="h">
+                    <img src="img/header-video.png" alt="h">
                 </div>
             </div>
         </div>
@@ -72,7 +72,7 @@
         <div class="arrival-wrap">
             <div class="arrival">
                 <div class="arrival-headerline">
-                    <img src="/img/logo-orange.png" alt="logo">
+                    <img src="img/logo-orange.png" alt="logo">
                     <h2>New</h2>
                     <h1>Arrival</h1>
                 </div>
@@ -83,23 +83,23 @@
                     <span class="arrival-left-arrow"></span>
                     <div class="animal">
                         <div class="cat">
-                            <img src="/img/cat.png" alt="cat">
+                            <img src="img/cat.png" alt="cat">
                             <h3>Cat</h3>
                         </div>
                         <div class="bird">
-                            <img src="/img/bird.png" alt="birt">
+                            <img src="img/bird.png" alt="birt">
                             <h3>BIRD</h3>
                         </div>
                         <div class="lion">
-                            <img src="/img/lion.png" alt="lion">
+                            <img src="img/lion.png" alt="lion">
                             <h3>LIon</h3>
                         </div>
                         <div class="deer">
-                            <img src="/img/deer.png" alt="deer">
+                            <img src="img/deer.png" alt="deer">
                             <h3>Deer</h3>
                         </div>
                         <div class="dove">
-                            <img src="/img/dove.png" alt="dove">
+                            <img src="img/dove.png" alt="dove">
                             <h3>Dove</h3>
                         </div>
                     </div>
@@ -112,7 +112,7 @@
                 <div class="birds">
                     <div class="birds-left-bloc">
                         <div class="birds-headerline">
-                            <img src="/img/logo.png" alt="logo">
+                            <img src="img/logo.png" alt="logo">
                             <h2>About</h2>
                             <h3> Our Birds</h3>
                         </div>
@@ -123,7 +123,7 @@
                         <a href="#">Read More</a>
                     </div>
                     <div class="birds-right-bloc">
-                        <img src="/img/red-robin.png" alt="red-robin">
+                        <img src="img/red-robin.png" alt="red-robin">
                     </div>
                 </div>
             </div>
@@ -132,7 +132,7 @@
             <div class="wrapper">
                 <div class="birds-animals">
                     <div class="birds-animals-headerline">
-                        <img src="/img/logo-orange.png" alt="logo">
+                        <img src="img/logo-orange.png" alt="logo">
                         <h2>Our Birds And</h2>
                         <h3>Animals</h3>
                     </div>
@@ -142,14 +142,14 @@
             </div>
             <div class="gallery-wrap">
                 <div class="gallery">
-                    <div class="bird-1"><img src="/img/bird-1.jpg" alt="bird"></div>
-                    <div class="bird-2"><img src="/img/bird-2.jpg" alt="bird"></div>
-                    <div class="bird-3"><img src="/img/bird-3.jpg" alt="bird"></div>
+                    <div class="bird-1"><img src="img/bird-1.jpg" alt="bird"></div>
+                    <div class="bird-2"><img src="img/bird-2.jpg" alt="bird"></div>
+                    <div class="bird-3"><img src="img/bird-3.jpg" alt="bird"></div>
                     <div class="gallery-bloc">
-                        <div class="bird-4"><img src="/img/bird-4.jpg" alt="bird"></div>
+                        <div class="bird-4"><img src="img/bird-4.jpg" alt="bird"></div>
                         <div class="gallery-column">
-                            <div class="ducks"><img src="/img/ducks.jpg" alt="bird"></div>
-                            <div class="bird-5"><img src="/img/bird-5.jpg" alt="bird"></div>
+                            <div class="ducks"><img src="img/ducks.jpg" alt="bird"></div>
+                            <div class="bird-5"><img src="img/bird-5.jpg" alt="bird"></div>
                         </div>
                     </div>
                 </div>
@@ -162,7 +162,7 @@
             <div class="wrapper">
                 <div class="testimonial">
                     <div class="testimonial-headerline">
-                        <img src="/img/logo-orange.png" alt="logo">
+                        <img src="img/logo-orange.png" alt="logo">
                         <h2>Testimonial</h2>
                     </div>
                     <div class="alex-info">
@@ -203,7 +203,7 @@
     <footer>
         <div class="request">
             <div class="request-headerline">
-                <img src="/img/logo-orange.png" alt="logo">
+                <img src="img/logo-orange.png" alt="logo">
                 <h2>Request A</h2>
                 <h3>Call Back</h3>
             </div>
@@ -233,16 +233,16 @@
         <div class="footer-line">
             <div class="social-line">
                 <a href="#">
-                    <img src="/img/facebook-logo-button.png" alt="facebook-logo-button">
+                    <img src="img/facebook-logo-button.png" alt="facebook-logo-button">
                 </a>
                 <a href="#">
-                    <img src="/img/twitter-logo-button.png" alt="twitter-logo-button">
+                    <img src="img/twitter-logo-button.png" alt="twitter-logo-button">
                 </a>
                 <a href="#">
-                    <img src="/img/linkedin.png" alt="linkedin">
+                    <img src="img/linkedin.png" alt="linkedin">
                 </a>
                 <a href="#">
-                    <img src="/img/instagram.png" alt="instagram">
+                    <img src="img/instagram.png" alt="instagram">
                 </a>
             </div>
             <hr>
