--- a/index.html
+++ b/index.html
@@ -82,26 +82,36 @@
                 <div class="animal-line">
                     <span class="arrival-left-arrow"></span>
                     <div class="animal">
-                        <div class="cat">
-                            <img src="img/cat.png" alt="cat">
-                            <h3>Cat</h3>
-                        </div>
-                        <div class="bird">
-                            <img src="img/bird.png" alt="birt">
-                            <h3>BIRD</h3>
-                        </div>
-                        <div class="lion">
-                            <img src="img/lion.png" alt="lion">
-                            <h3>LIon</h3>
-                        </div>
-                        <div class="deer">
-                            <img src="img/deer.png" alt="deer">
-                            <h3>Deer</h3>
-                        </div>
-                        <div class="dove">
-                            <img src="img/dove.png" alt="dove">
-                            <h3>Dove</h3>
-                        </div>
+                        <a href="#">
+                            <div class="cat">
+                                <img src="img/cat.png" alt="cat">
+                                <h3>Cat</h3>
+                            </div>
+                        </a>
+                        <a href="#">
+                            <div class="bird">
+                                <img src="img/bird.png" alt="birt">
+                                <h3>BIRD</h3>
+                            </div>
+                        </a>
+                        <a href="#">
+                            <div class="lion">
+                                <img src="img/lion.png" alt="lion">
+                                <h3>LIon</h3>
+                            </div>
+                        </a>
+                        <a href="#">
+                            <div class="deer">
+                                <img src="img/deer.png" alt="deer">
+                                <h3>Deer</h3>
+                            </div>
+                        </a>
+                        <a href="#">
+                            <div class="dove">
+                                <img src="img/dove.png" alt="dove">
+                                <h3>Dove</h3>
+                            </div>
+                        </a>
                     </div>
                     <span class="arrival-right-arrow"></span>
                 </div>
@@ -142,14 +152,46 @@
             </div>
             <div class="gallery-wrap">
                 <div class="gallery">
-                    <div class="bird-1"><img src="img/bird-1.jpg" alt="bird"></div>
-                    <div class="bird-2"><img src="img/bird-2.jpg" alt="bird"></div>
-                    <div class="bird-3"><img src="img/bird-3.jpg" alt="bird"></div>
-                    <div class="gallery-bloc">
-                        <div class="bird-4"><img src="img/bird-4.jpg" alt="bird"></div>
-                        <div class="gallery-column">
-                            <div class="ducks"><img src="img/ducks.jpg" alt="bird"></div>
-                            <div class="bird-5"><img src="img/bird-5.jpg" alt="bird"></div>
+                    <div>
+                        <img src="img/bird-1.jpg" alt="bird">
+                        <div class="bird-button">
+                            <a href="#"><img src="img/heard-orange.png" alt="heard"></a>
+                            <a href="#"><img src="img/ .png" alt="?"></a>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="img/bird-2.jpg" alt="bird">
+                        <div class="bird-button">
+                            <a href="#"><img src="img/heard-orange.png" alt="heard"></a>
+                            <a href="#"><img src="img/ .png" alt="?"></a>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="img/bird-3.jpg" alt="bird">
+                        <div class="bird-button">
+                            <a href="#"><img src="img/heard-orange.png" alt="heard"></a>
+                            <a href="#"><img src="img/ .png" alt="?"></a>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="img/bird-4.jpg" alt="bird">
+                        <div class="bird-button">
+                            <a href="#"><img src="img/heard-orange.png" alt="heard"></a>
+                            <a href="#"><img src="img/ .png" alt="?"></a>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="img/ducks.jpg" alt="bird">
+                        <div class="bird-button">
+                            <a href="#"><img src="img/heard-orange.png" alt="heard"></a>
+                            <a href="#"><img src="img/ .png" alt="?"></a>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="img/bird-5.jpg" alt="bird">
+                        <div class="bird-button">
+                            <a href="#"><img src="img/heard-orange.png" alt="heard"></a>
+                            <a href="#"><img src="img/ .png" alt="?"></a>
                         </div>
                     </div>
                 </div>
@@ -249,7 +291,7 @@
             <p>© 2019 All Rights Reserved. Design by Free Html Templates</p>
         </div>
     </footer>
-    
+
 </body>
 
 </html>
